name:              Scrumble
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  src
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Model.Role
                     Model.ProjectRole
                     Model.StoryPriority
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Authorization
                     Validation
                     Util
                     Handler.Home
                     Handler.Users
                     Handler.UsersUser
                     Handler.Projects
                     Handler.ProjectsProject
                     Handler.Authentication
                     Handler.UsersUserPassword
                     Handler.AuthLogout
                     Handler.AuthUser
                     Handler.Stories
                     Handler.StoriesStory
                     Handler.Sprint
                     Handler.Sprints
                     Handler.SprintStory
                     Handler.SprintStories
                     Handler.ProjectUsers
                     Handler.ProjectUser
                     Handler.Tasks

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                FlexibleInstances
                ScopedTypeVariables
                DeriveGeneric
                DeriveFunctor

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2.5      && < 1.3
                 , yesod-core                    >= 1.2.9      && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 1.3        && < 1.4
                 , persistent-mysql              >= 1.3        && < 1.4
                 , persistent-template           >= 1.3        && < 1.4
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.2        && < 1.3
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 2.0        && < 2.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.0        && < 2.1
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 2.0        && < 2.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.8
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.1.4      && < 2.2
                 , wai-logger                    >= 2.1        && < 2.2
                 , unordered-containers          >= 0.2        && < 0.3
                 , pwstore-fast                  >= 2.4        && < 2.5
                 , http-types                    >= 0.8        && < 0.9
                 , MaybeT                        >= 0.1.2      && < 0.2
                 , mtl                           >= 2.1        && < 2.2
                 , resourcet                     >= 0.4        && < 0.5
                 , wai                           >= 2.0        && < 2.1
                 , esqueleto                     >= 1.3        && < 1.4
                 , time                          >= 1.4        && < 1.5

executable         Scrumble
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Scrumble
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Scrumble
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-mysql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
